Fix misaligned sidebar playlist styling

--- a/src/assets/stylesheets/_sidebar.scss
+++ b/src/assets/stylesheets/_sidebar.scss
@@ -59,7 +59,7 @@
 
     }
 
-    .playlist-remove {
+    .playlist-remove-button {
       float: right;
       margin-right: 5px;
     }
